# task-management-system

./: .gitignore  Dockerfile  README  docker-compose.yml  pyproject.toml  tests.txt
app/: api.py  database.py  main.py  models.py  queries.py  schemas.py
tests/: conftest.py  test_create_task.py  test_delete_task.py  test_get_tasks.py  test_update_task.py
