[project]
name = "fastapi-sqlite-app"
version = "0.1.0"
description = "FastAPI with SQLite using uv"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "aiosqlite",
    "pydantic",
    "httpx",
    "pytest",
    "pre-commit",
    "black",
    "flake8",
    "isort"
]