[project]
name = "fastapi-sqlite-app"
version = "0.1.0"
description = "FastAPI with SQLite using uv"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "aiosqlite",
    "pydantic",
    "httpx",
    "aiosqlite"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy"
]

[tool.poetry.dependencies]
uvicorn = "^0.22.0"